src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Consumer_Item_Description__c</fullName>
        <description>Consumer Item description</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Item_Number__c</fullName>
        <description>Consumer item number</description>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Make__c</fullName>
        <description>In store assets - equipment make</description>
        <label>Equipment Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Model__c</fullName>
        <description>In store assets - equipment model</description>
        <label>Equipment Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Product_ID_Number__c</fullName>
        <description>Product ID number from source system. Used by API upon loading products.</description>
        <externalId>true</externalId>
        <label>Legacy Product ID Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Support_Company_Name__c</fullName>
        <description>In store assets - national support company name</description>
        <label>Primary Support Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Support_Phone_Number__c</fullName>
        <description>In store assets - national support contact number</description>
        <label>Primary Support Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Assortment__c</fullName>
        <description>Lowe&apos;s Assortment Code</description>
        <label>Product Assortment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>Source Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Valspar_Master_Channel_Partner_Asset_Record_Type</fullName>
        <active>true</active>
        <description>Record type used to differentiate Channel Partner assets from Valspar Products</description>
        <label>Valspar Master Channel Partner Asset Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Valspar_Master_Products_Record_Type</fullName>
        <active>true</active>
        <description>Master custom record type</description>
        <label>Valspar Master Products Record Type</label>
    </recordTypes>
</CustomObject>